fix: neo4j crud